<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8e8e9" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

       <RadioGroup
            android:id="@+id/home_radio_button_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_63_dip"
            android:background="#e8e8e9"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/home_tab_home"
                style="@style/home_tab_bottom"
                android:checked="true"
                android:drawableTop="@drawable/tab_laywer_selector"
                android:text="@string/tab_home" />

            <RadioButton
                android:id="@+id/home_tab_official"
                style="@style/home_tab_bottom"
                android:drawableTop="@drawable/tab_talk_selctor"
                android:text="@string/tab_official"/>

            <RadioButton
                android:id="@+id/home_tab_drive"
                style="@style/home_tab_bottom"
                android:drawableTop="@drawable/tab_answer_selector"
                android:text="@string/tab_drive"/>

            <RadioButton
                android:id="@+id/home_tab_brand"
                style="@style/home_tab_bottom"
                android:drawableTop="@drawable/tab_more_selector"
                android:text="@string/tab_brand"/>

            <RadioButton
                android:id="@+id/home_tab_icar"
                style="@style/home_tab_bottom"
                android:drawableTop="@drawable/tab_my_selector"
                android:text="@string/tab_icar" />                    
        </RadioGroup>
    </LinearLayout>

</TabHost>