<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgm" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_23_dip"
        android:layout_marginLeft="@dimen/dimen_25_dip"
        android:layout_marginRight="@dimen/dimen_29_dip"
        android:text="@string/return_tips2"
        android:textColor="@color/home_title_bgm"
        android:lineSpacingMultiplier="1.3"
        android:textSize="13sp"
        />
    
    <EditText 
        android:id="@+id/return_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_47_dip"
        android:layout_marginTop="@dimen/dimen_16_dip"
         android:layout_marginLeft="@dimen/dimen_25_dip"
        android:layout_marginRight="@dimen/dimen_29_dip"
        android:hint="@string/login_user_tips"
        android:background="@drawable/return_phone"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_19_dip"
        android:inputType="number"
        android:textSize="13sp"
        android:textColorHint="@color/need_666"
        android:textColor="@color/home_title_bgm"
        />
    
     <Button
        android:id="@+id/return_submit"
        android:layout_width="@dimen/dimen_151_dip"
        android:layout_height="@dimen/dimen_46_dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_32_dip"
        android:background="@drawable/login_submit_selector"
        android:gravity="center"
        android:text="@string/register_submit_tips"
        android:textColor="@color/white" />

</LinearLayout>
