<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgm"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_142_dip"
        android:layout_marginTop="@dimen/dimen_23_dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0.5_dip"
            android:background="@color/border" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_71_dip" >

            <ImageView
                android:id="@+id/user_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_71_dip"
                android:src="@drawable/login_auth" />

            <EditText
                android:id="@+id/setting_auth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/user_tips"
                android:background="@null"
                android:hint="@string/setting_password_tips"
                android:layout_marginLeft="@dimen/dimen_27_dip"
                android:inputType="number"
                android:textColorHint="@color/need_666"
                android:textSize="15sp" 
                android:maxLength="4"
                android:textColor="@color/home_title_bgm"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0.5_dip"
            android:background="@color/border" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_70_dip" >

            <ImageView
                android:id="@+id/password_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_71_dip"
                android:src="@drawable/login_password" />

            <EditText
                android:id="@+id/setting_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/password_tips"
                android:background="@null"
                android:hint="@string/setting_password_again"
                android:textColorHint="@color/need_666"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/dimen_27_dip"
                android:inputType="textPassword" 
                android:textColor="@color/home_title_bgm"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5_dip"
        android:background="@color/border" />

    <Button
        android:id="@+id/setting_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_52_dip"
        android:layout_marginLeft="@dimen/dimen_33_dip"
        android:layout_marginRight="@dimen/dimen_33_dip"
        android:layout_marginTop="@dimen/dimen_33_dip"
        android:background="@drawable/login_submit_selector"
        android:gravity="center"
        android:text="@string/submit1"
        android:textColor="@color/white" />


</LinearLayout>